Make examples run serially by default

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,8 @@ artifact=develocity-api-kotlin
 version=2024.2.0-alpha02
 develocity.version=2024.2
 repo.url=https://github.com/gabrielfeo/develocity-api-kotlin
+parallelExamples=false
+org.gradle.parallel=true
 org.gradle.jvmargs=-Xmx5g
 org.gradle.caching=true
 # Becomes default in Gradle 9.0
