--- a/.github/workflows/update-examples.yml
+++ b/.github/workflows/update-examples.yml
@@ -29,7 +29,7 @@ jobs:
           # Delete latest for sorting. v:refname doesn't handle Maven version qualifiers correctly.
           git tag -d "$NEW_VERSION"
           old_version="$(git tag --sort=-v:refname | head -n 1)"
-          echo "OLD_VERSION=$old_version" >> $GITHUB_ENV
+          echo "OLD_VERSION=$old_version" | tee -a $GITHUB_ENV
       - name: 'Update version in all files'
         run: ./.github/scripts/replace_string.py ./ "$OLD_VERSION" "$NEW_VERSION"
       - name: 'Create PR'
