--- a/.github/workflows/update-examples.yml
+++ b/.github/workflows/update-examples.yml
@@ -23,13 +23,15 @@ jobs:
         with:
           fetch-depth: 0
       - run: pip install -r .github/scripts/requirements.txt
-      - run: echo "NEW_VERSION=${{ inputs.ref || github.ref_name }}" >> $GITHUB_ENV
       - name: 'Get versions'
         run: |
-          # Delete latest for sorting. v:refname doesn't handle Maven version qualifiers correctly.
-          git tag -d "$NEW_VERSION"
-          old_version="$(git tag --sort=-v:refname | head -n 1)"
-          echo "OLD_VERSION=$old_version" | tee -a $GITHUB_ENV
+          new="${{ inputs.ref || github.ref_name }}"
+          echo "Deleting '$new' in case it's alpha to stable bump." \
+            "Git v:refname doesn't handle Maven version qualifiers correctly."
+          git tag -d "$new"
+          old="$(git tag --sort=-v:refname | head -n 1)"
+          echo "NEW_VERSION=$new" | tee -a $GITHUB_ENV
+          echo "OLD_VERSION=$old" | tee -a $GITHUB_ENV
       - name: 'Update version in all files'
         run: ./.github/scripts/replace_string.py ./ "$OLD_VERSION" "$NEW_VERSION"
       - name: 'Create PR'
