Improve PR body

--- a/.github/workflows/update-examples.yml
+++ b/.github/workflows/update-examples.yml
@@ -39,6 +39,7 @@ jobs:
         with:
           base: 'main'
           branch: "replace-${{ env.OLD_VERSION }}-${{ env.NEW_VERSION }}"
-          title: "Update version in examples to ${{ env.NEW_VERSION }}"
+          title: "Bump examples and badges to ${{ env.NEW_VERSION }}"
           author: "github-actions <github-actions@github.com>"
           committer: "github-actions <github-actions@github.com>"
+          body: "Bump the version in examples and badges from ${{ env.OLD_VERSION }} to ${{ env.NEW_VERSION }}."
