Dump API dump before update-api-spec PR
(cherry picked from commit 9b771a6e7f651e19014758fc4c212808c8384156)
(cherry picked from commit 40df57fffaed58c17e2f30c0c50b3287c0e063e0)

--- a/.github/workflows/update-api-spec.yml
+++ b/.github/workflows/update-api-spec.yml
@@ -33,6 +33,11 @@ jobs:
             echo "NEW_VERSION=$(cat new.txt)" >> $GITHUB_ENV
           fi
           rm new.txt || true
+      - name: gradle :library:apiDump
+        uses: ./.github/actions/build
+        with:
+          dry-run: ${{ inputs.dry_run }}
+          args: :library:apiDump
       - name: Check for existing PR
         if: ${{ env.NEW_VERSION }}
         run: |
