--- a/.github/workflows/update-api-spec.yml
+++ b/.github/workflows/update-api-spec.yml
@@ -33,6 +33,11 @@ jobs:
             echo "NEW_VERSION=$(cat new.txt)" >> $GITHUB_ENV
           fi
           rm new.txt || true
+      - name: gradle :library:apiDump
+        uses: ./.github/actions/build
+        with:
+          dry-run: ${{ inputs.dry_run }}
+          args: :library:apiDump
       - name: Check for existing PR
         if: ${{ env.NEW_VERSION }}
         run: |
@@ -48,7 +53,12 @@ jobs:
         with:
           branch: "${{ env.UPDATE_BRANCH }}"
           commit-message: "Bump Develocity API spec version to ${{ env.NEW_VERSION }}"
-          title: "Bump Develocity API spec version to ${{ env.NEW_VERSION }}"
+          title: |
+            Bump Develocity API spec version to ${{ env.NEW_VERSION }}
+
+            Generated from workflow run [${{ github.run_id }}][1].
+
+            [1]: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
           body: "https://docs.gradle.com/enterprise/api-manual/#release_history"
           author: "github-actions <github-actions@github.com>"
           committer: "github-actions <github-actions@github.com>"
