Prepare for next release

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 group=com.gabrielfeo
 artifact=develocity-api-kotlin
-version=2024.3.0
+version=2024.3.0-alpha01
 develocity.version=2024.3
 repo.url=https://github.com/gabrielfeo/develocity-api-kotlin
 parallelExamples=false
