Group .github/scripts dependency bumps

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -35,5 +35,10 @@
       "groupName": "Kotlin/Jupyter",
       "groupSlug": "kotlin-jupyter",
     },
+    // Group bumps of .github/scripts dependencies (pip)
+    {
+      "matchManagers": ["pip_requirements"],
+      "groupName": ".github/scripts dependencies",
+    }
   ],
 }
