Ensure examplesTest compiles in PRs

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -20,6 +20,7 @@ jobs:
           args: >-
             test
             compileIntegrationTestKotlin
+            compileExamplesTestKotlin
             :build-logic:check
             :library:apiCheck
 
