Fix workflow syntax

--- a/.github/workflows/publish-library.yml
+++ b/.github/workflows/publish-library.yml
@@ -25,7 +25,7 @@ jobs:
   build-and-publish:
     runs-on: ubuntu-latest
     env:
-      DEVELOCITY_API_URL: "${{ variables.DEVELOCITY_API_URL }}"
+      DEVELOCITY_API_URL: "${{ vars.DEVELOCITY_API_URL }}"
       DEVELOCITY_API_TOKEN: "${{ secrets.DEVELOCITY_API_TOKEN }}"
     steps:
       - name: Checkout
