--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -14,6 +14,7 @@ jobs:
     env:
       DEVELOCITY_API_URL: "${{ vars.DEVELOCITY_API_URL }}"
       DEVELOCITY_API_TOKEN: "${{ secrets.DEVELOCITY_API_TOKEN }}"
+      DEVELOCITY_API_CACHE_ENABLED: "false"
     steps:
       - name: Checkout
         uses: actions/checkout@v4
