Remove Kotlin Jupyter Gradle plugin
This integration format successfully avoids Kotlin Jupyter's dependency on dev versions of the Kotlin Gradle plugin (and the Kotlin compiler), which is failing #424. It has the downside that using Jupyter Testkit will no longer be possible. To proceed with this approach, DevelocityApiJupyterIntegrationTest tests will need to be migrated to actual notebooks, running via jupyter nbconvert as in the examplesTest suite.

Original failure: https://scans.gradle.com/s/vy3gdlvqaolni

On this commit: https://scans.gradle.com/s/zuuezcwirtteg

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,9 +2,7 @@
 kotlin = "2.2.0"
 dokka = "2.0.0"
 openapi-generator = "7.14.0"
-jupyter-api = "0.12.0-398"
-jupyter-testkit = "0.12.0-398"
-jupyter-plugin = "0.12.0-398"
+jupyter = "0.14.1-550"
 okio = "3.16.0"
 moshi = "1.15.2"
 okhttp = "5.1.0"
@@ -26,8 +24,8 @@ retrofit-converter-moshi = { module = "com.squareup.retrofit2:converter-moshi", 
 retrofit-converter-scalars = { module = "com.squareup.retrofit2:converter-scalars", version.ref = "retrofit" }
 kotlin-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlin-coroutines" }
 kotlin-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlin-coroutines" }
-kotlin-jupyter-api = { module = "org.jetbrains.kotlinx:kotlin-jupyter-api", version.ref = "jupyter-api" }
-kotlin-jupyter-testkit = { module = "org.jetbrains.kotlinx:kotlin-jupyter-test-kit", version.ref = "jupyter-testkit" }
+kotlin-jupyter-api = { module = "org.jetbrains.kotlinx:kotlin-jupyter-api", version.ref = "jupyter" }
+kotlin-jupyter-testkit = { module = "org.jetbrains.kotlinx:kotlin-jupyter-test-kit", version.ref = "jupyter" }
 kotlin-binary-compatibility-validator-plugin = { module = "org.jetbrains.kotlinx:binary-compatibility-validator", version.ref = "kotlin-binary-compatibility-validator" }
 kotlin-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 dokka-plugin = { module = "org.jetbrains.dokka:dokka-gradle-plugin", version.ref = "dokka" }
@@ -35,6 +33,3 @@ openapi-generator-plugin = { module = "org.openapitools:openapi-generator-gradle
 slf4j-api = { module = "org.slf4j:slf4j-api", version.ref = "slf4j" }
 slf4j-simple = { module = "org.slf4j:slf4j-simple", version.ref = "slf4j" }
 guava = { module = "com.google.guava:guava", version.ref = "guava" }
-
-[plugins]
-kotlin-jupyter = { id = "org.jetbrains.kotlin.jupyter.api", version.ref = "jupyter-plugin" }
