--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       DEVELOCITY_API_URL: "${{ vars.DEVELOCITY_API_URL }}"
-      DEVELOCITY_API_TOKEN: "${{ secrets.DEVELOCITY_API_TOKEN }}"
+      DEVELOCITY_ACCESS_KEY: "${{ secrets.DEVELOCITY_ACCESS_KEY }}"
       DEVELOCITY_API_CACHE_ENABLED: "false"
     steps:
       - name: Checkout
