--- a/.github/workflows/publish-library.yml
+++ b/.github/workflows/publish-library.yml
@@ -26,7 +26,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       DEVELOCITY_API_URL: "${{ vars.DEVELOCITY_API_URL }}"
-      DEVELOCITY_API_TOKEN: "${{ secrets.DEVELOCITY_API_TOKEN }}"
+      DEVELOCITY_ACCESS_KEY: "${{ secrets.DEVELOCITY_ACCESS_KEY }}"
     steps:
       - name: Checkout
         uses: actions/checkout@v5
