--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -21,7 +21,7 @@ jobs:
       - name: gradle check
         uses: ./.github/actions/build
         with:
-          args: check
+          args: check --info
 
   python-tests:
     runs-on: ubuntu-latest
