Revert "Run check --info to investigate CI hang"
This reverts commit 31b70fb8bbb4f2b6ad027fcaadd8c9c257f01760.

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -21,7 +21,7 @@ jobs:
       - name: gradle check
         uses: ./.github/actions/build
         with:
-          args: check --info
+          args: check
 
   python-tests:
     runs-on: ubuntu-latest
