--- a/.github/link-check-config.json
+++ b/.github/link-check-config.json
@@ -1,4 +1,6 @@
 {
+  "retryCount": 3,
+  "fallbackRetryDelay": "120s",
   "replacementPatterns": [
     {
       "pattern": "^https://nbviewer.org/github/",
