--- a/.github/workflows/publish-javadoc.yml
+++ b/.github/workflows/publish-javadoc.yml
@@ -50,6 +50,8 @@ jobs:
         run: rm -rf docs
       - name: Download new javadoc
         uses: actions/download-artifact@v5
+        with:
+          path: docs
       - name: Commit
         run: |
           git config user.name github-actions
