Fix publish-javadoc workflow (#478)
Fix GH pages publishing workflow error, since #445. Was not caught by
dry-run workflow that runs in PRs because the dry-run is sensitive to
the current `gh-pages` branch contents. A 1st workflow run pushed an
empty commit, then the [2nd run][1] failed.

[1]:
https://github.com/gabrielfeo/develocity-api-kotlin/actions/runs/17628318940

--- a/.github/workflows/publish-javadoc.yml
+++ b/.github/workflows/publish-javadoc.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Download new javadoc
         uses: actions/download-artifact@v5
         with:
-          path: ./
+          path: docs
       - name: Commit
         run: |
           git config user.name github-actions
