Migrate to Dokka v2 for CC support

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,5 @@ org.gradle.kotlin.dsl.skipMetadataVersionCheck=false
 kotlin.jupyter.add.api=false
 kotlin.jupyter.add.scanner=false
 kotlin.jupyter.add.testkit=false
+org.jetbrains.dokka.experimental.gradle.pluginMode=V2Enabled
+org.jetbrains.dokka.experimental.gradle.pluginMode.noWarn=true
