--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,8 @@ repo.url=https://github.com/gabrielfeo/develocity-api-kotlin
 org.gradle.parallel=true
 org.gradle.jvmargs=-Xmx5g
 org.gradle.caching=true
+org.gradle.configuration-cache=true
+org.gradle.configuration-cache.parallel=true
 # Becomes default in Gradle 9.0
 org.gradle.kotlin.dsl.skipMetadataVersionCheck=false
 # Explicitly added at different versions, due to Kotlin/kotlin-jupyter#462
