Fix unavailable signing key in PR jobs
(cherry picked from commit 5f1311769c21422091efc2fa2276ca2dab0a22b2)

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -39,11 +39,13 @@ jobs:
     uses: ./.github/workflows/publish-javadoc.yml
     with:
       dry_run: true
+    secrets: inherit
 
   dry-run-publish-library:
     uses: ./.github/workflows/publish-library.yml
     with:
       dry_run: true
+    secrets: inherit
 
   dry-run-update-api-spec:
     uses: ./.github/workflows/update-api-spec.yml
