Fix update-examples workflow

--- a/.github/workflows/update-examples.yml
+++ b/.github/workflows/update-examples.yml
@@ -28,9 +28,10 @@ jobs:
       - run: pip install -r .github/scripts/requirements.txt
       - name: 'Get versions'
         run: |
+          old="${{ inputs.old }}"
           new="${{ inputs.new || github.ref_name }}"
           echo "NEW_VERSION=$new" | tee -a $GITHUB_ENV
-          if [[ "${{ inputs.old }}" == "" ]]; then
+          if [[ "$old" == "" ]]; then
             echo "Auto-detecting old version from git tags"
             # Get previous version from descending tag list
             old="$(git tag --sort=-v:refname | grep -A1 "$new" | tail -1)"
