Expand benchmarking scenarios

--- a/scenarios.conf
+++ b/scenarios.conf
@@ -1,7 +1,6 @@
 base = {
-    cleanup-tasks = ["cleanExamplesTest"]
-    tasks = ["examplesTest"]
-    gradle-args = ["-I", "../test-filters.init.gradle", "--no-build-cache"]
+    tasks = ["check"]
+    gradle-args = ["--rerun-tasks"]
     warm-ups = 3
     iterations = 6
 }
