--- a/.github/workflows/update-examples.yml
+++ b/.github/workflows/update-examples.yml
@@ -27,6 +27,11 @@ jobs:
         uses: actions/checkout@v5
         with:
           fetch-depth: 0
+      - name: Setup Python
+        uses: actions/setup-python@v6
+        with:
+          python-version: '3.13'
+          cache: 'pip'
       - run: pip install -r .github/scripts/requirements.txt
       - name: 'Get versions'
         run: |
